APIs_and_Microservices/06_deployment/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: orders-service
  labels:
    app: orders-service
spec:
  selector:
    app: orders-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
